--- a/Gizmo.Client.UI.Resources/Properties/Resources.el-gr.resx
+++ b/Gizmo.Client.UI.Resources/Properties/Resources.el-gr.resx
@@ -6,7 +6,7 @@
   Release: Working copy
   Locale: el-GR, Greek (Greece)
   Exported by: Dimitrios Klapsis
-  Exported at: Tue, 26 Sep 2023 14:26:55 +0300 
+  Exported at: Wed, 27 Sep 2023 14:44:16 +0300 
   --> 
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
     <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
@@ -1301,7 +1301,7 @@
     <value>Το αίτημα έχει αποσταλεί.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SENT_MESSAGE" xml:space="preserve"> 
-    <value>Παρακαλώ περιμένετε μέχρι ο χειριστής να αποδεχτεί το αίτημα σας.</value> 
+    <value>Παρακαλώ περιμένετε μέχρι ο χειριστής να αποδεχτεί το αίτημα σας, η απάντηση θα σας αποσταλεί στην περιοχή των ειδοποιήσεων.</value> 
   </data> 
   <data name="GIZ_ASSISTANCE_REQUEST_SENT_CANCEL" xml:space="preserve"> 
     <value>Απόρριψη αιτήματος</value> 
@@ -1331,7 +1331,7 @@
     <value>Ενεργοποιήθηκε {0}</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_TOOLTIP_HEADER" xml:space="preserve"> 
-    <value>Λήγει μετά από</value> 
+    <value>Λήγει</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_FROM_PURCHASE" xml:space="preserve"> 
     <value>{0} από την αγορά</value> 
@@ -1340,7 +1340,7 @@
     <value>{0} από την χρήση</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_LOGOUT" xml:space="preserve"> 
-    <value>έξοδο</value> 
+    <value>μετά την έξοδο</value> 
   </data> 
   <data name="GIZ_USER_TIME_PRODUCTS_PROPERTIES_EXPIRES_EXPIRATION_COUNTDOWN_STARTED_DESCRIPTION" xml:space="preserve"> 
     <value>Η προσφορά είναι ενεργή.</value> 
@@ -1373,7 +1373,7 @@
     <value>Πήγαινε στο Κατάστημα</value> 
   </data> 
   <data name="GIZ_MENU_BALANCE_TOOLTIP_CREDIT" xml:space="preserve"> 
-    <value>Η πίστωση είναι διαθέσιμη στον λογαριασμό</value> 
+    <value>Η πίστωση είναι διαθέσιμη στον λογαριασμό.</value> 
   </data> 
   <data name="GIZ_USER_PROFILE_CREDIT_TOOLTIP_UNLIMITED_CREDIT_DESCRIPTION" xml:space="preserve"> 
     <value>Απεριόριστη πίστωση</value> 
@@ -1437,5 +1437,17 @@
   </data> 
   <data name="GIZ_USER_PURCHASES_ORDER_STATUS_VOIDED" xml:space="preserve"> 
     <value>Ακυρώθηκε</value> 
+  </data> 
+  <data name="GIZ_ASSISTANCE_REQUEST_RESPONSE_TITLE" xml:space="preserve"> 
+    <value>Αίτημα Βοήθειας</value> 
+  </data> 
+  <data name="GIZ_ASSISTANCE_REQUEST_RESPONSE_ACCEPTED" xml:space="preserve"> 
+    <value>Ο χειριστής αποδέχτηκε το αίτημα σας και θα είναι σύντομα εκεί για να σας βοηθήσει.</value> 
+  </data> 
+  <data name="GIZ_ASSISTANCE_REQUEST_RESPONSE_REJECTED" xml:space="preserve"> 
+    <value>Δεν είναι δυνατή η επεξεργασία του αιτήματός σας.</value> 
+  </data> 
+  <data name="GIZ_GEN_GUEST" xml:space="preserve"> 
+    <value>Επισκέπτης</value> 
   </data> 
 </root>
